--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "commit": "cz",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.8",
+    "@radix-ui/react-avatar": "^1.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.3",
+    "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.4",
+    "framer-motion": "^10.0.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-loading-skeleton": "^3.1.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
