--- a/package.json
+++ b/package.json
@@ -46,5 +46,10 @@
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "prettier": "^2.8.4",
     "typescript": "*"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
