--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@fontsource/roboto": "^4.5.8",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
+    "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-separator": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.4",
+    "@reduxjs/toolkit": "^1.9.3",
     "framer-motion": "^10.0.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
     "react-loading-skeleton": "^3.1.1",
+    "react-redux": "^8.0.5",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
