--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "postinstall": "husky install"
+  },
+  "lint-staged": {
+    "**/*.{js,ts,jsx,tsx}": [
+      "eslint --fix",
+      "prettier --config .prettierrc.json --write"
+    ],
+    "*.json": [
+      "prettier --write"
+    ],
+    "lint": "eslint --fix"
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
@@ -63,6 +74,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "typescript": "*"
   },
