--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "framer-motion": "^10.0.1",
     "next": "13.2.1",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
