--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-loading-skeleton": "^3.1.1",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.6",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
