--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-separator": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.4",
+    "@react-three/drei": "^9.58.5",
+    "@react-three/fiber": "^8.12.0",
     "@reduxjs/toolkit": "^1.9.3",
     "framer-motion": "^10.0.1",
     "next": "13.2.1",
@@ -42,6 +45,7 @@
     "react-loading-skeleton": "^3.1.1",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.6",
+    "three": "^0.150.1",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0"
   },
@@ -59,6 +63,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "^5.1.26",
+    "@types/three": "^0.150.0",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "babel-loader": "^8.3.0",
