--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.15.0",
     "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
