--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
-    "typescript": "*"
+    "typescript": "5.0.4"
   },
   "config": {
     "commitizen": {
