--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@fontsource/roboto": "^4.5.8",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/bundle-analyzer": "^13.4.7",
     "@prisma/client": "^4.15.0",
     "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-avatar": "^1.0.1",
