--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint": "eslint --fix"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.0.3",
     "@fontsource/roboto": "^4.5.8",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/bundle-analyzer": "^13.4.7",
